Fix fake text input on mobile

--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -108,8 +108,7 @@
         height: 100%;
         max-height: 100%;
         white-space: normal;
-        padding: 0;
-        margin: 16px;
+        padding: 0 16px;
     }
 }
 
